src/objects/IQVIA_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Lead Region.</description>
        <label>Template Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>ROW</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Global excluding USA</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>CLM-MC-CLMCMA-19499 - This field is used to store Legacy Id of migrated records.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - Legal Entity Field 1</description>
        <inlineHelpText>Enter the IQVIA Legal Entity</inlineHelpText>
        <label>Legal Entity 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Finance_IQVIA_Legal_Entity__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Oracle_Master</value>
            </filterItems>
            <filterItems>
                <field>Finance_IQVIA_Legal_Entity__c.Effective_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Finance_IQVIA_Legal_Entity__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Customer__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - To be used for field mapping between contract and agreement migrated records</description>
        <label>Legal Entity Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field used to store Legal Entity 1 Name</description>
        <formula>Legal_Entity_1__r.Name</formula>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Dialog_Text__c</fullName>
        <description>CLM-MC-CLMCMA-18824 - This is a formula field which is used in search layout for agreement.</description>
        <formula>FF_Agreement_Number__c + &apos; &apos; + Account__r.Name + &apos; &apos; + TEXT(Other_Party_Signed_Date__c) + &apos; &apos; + TEXT(Status_Category__c) + &apos; &apos; + MSA_Guidance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lookup Dialog Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Guidance__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store MSA Guidance.</description>
        <label>MSA Guidance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Team_s__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - My Team’s check box to use for the List view filter.</description>
        <formula>CONTAINS(Owner:User.UserRole.Name, $UserRole.Name)&amp;&amp; (Owner:User.UserRole.Name != $UserRole.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team’s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_and_My_Team_s__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - My and My Team’s checkbox to use for the list view.</description>
        <formula>CONTAINS (Owner:User.UserRole.Name, $UserRole.Name) 
&amp;&amp; 
(Owner:User.UserRole.Name != $UserRole.Name &amp;&amp; (OwnerId != $User.Id) || (OwnerId == $User.Id))</formula>
        <label>My and My Team’s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>CLM-MC-CLMCMA-18241 - This field is used to store number of users.</description>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O365_Internal_Review_AP__c</fullName>
        <description>CLM-MC-CLMCMA-18143 - Office 365 internal Review</description>
        <formula>IF (AND(ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Status__c,&quot;Internal Review&quot;)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/apttus__msauthorize?id=&quot;&amp;Conga_Agreement_Id__c &amp; &quot;&amp;action=Send_To_Office365_Internal_Review&quot;, IMAGE(&quot;/resource/Apttus__LightningResource/images/actions/sendforreview.svg&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Conga_Agreement_Id__c &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>O365 Internal Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneKey_Terms_Included__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store id onekey terms included or not.</description>
        <label>OneKey Terms Included?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Terms_Tech_Access_Terms_Incl__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if online terms/tech access terms included or not.</description>
        <label>Online Terms/Tech. Access Terms Incl.?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <description>CLM-MC-CLMCMA-20567 - This formula field is used to store account of the opportunity.</description>
        <formula>HYPERLINK(&apos;/&apos; + Related_Opportunity__r.Account.Id, Related_Opportunity__r.Account.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>Opportunity_Contact_Role_Email_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field store Opp. Contact Role email</description>
        <formula>Primary_Contact__r.Email</formula>
        <label>Opportunity Contact Role Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Fax_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field store Opp. Contact Role fax</description>
        <formula>Primary_Contact__r.Fax</formula>
        <label>Opportunity Contact Role Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Name_for__c</fullName>
        <description>CLM_MC-CLMCMA-18089 - This field store Opp. Contact Role Name</description>
        <formula>Primary_Contact__r.FirstName+&quot; &quot;+ Primary_Contact__r.LastName</formula>
        <label>Opportunity Contact Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Phone_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field use to store Opp. Contact Role Phone.</description>
        <formula>Primary_Contact__r.Phone</formula>
        <label>Opportunity Contact Role Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number_Formula__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This formula field displays Opportunity number.</description>            
        <formula>Related_Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field is used to store Opportunity Number.</description>            
        <label>Del-Opportunity Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - Field to store opportunity owner`s name.</description>
        <formula>Related_Opportunity__r.Owner.Full_User_Name__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - Self Lookup to store 0th agreement</description>
        <inlineHelpText>Auto-populated, read-only. The original agreement in the agreement amendment sequence i.e. the agreement with version 0 e.g., 0012345.0. For Change Orders it is the original WO/SOW/GSA; for MSA amendments it is the original MSA.</inlineHelpText>
        <label>Original Agreement</label>
        <referenceTo>IQVIA_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Original Agreement)</relationshipLabel>
        <relationshipName>Original_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_AGR_Opportunity_Number_Formula__c</fullName>
        <description>CLM-MC-CLMCMA-18816 - This field is used to store Original Agreement Opportunity Number.</description>
        <formula>Original_Agreement__r.Opportunity_Number_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original AGR Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_AGR_Legal_Entity_Customer_For__c</fullName>
        <description>CLM-MC-CLMCMA-18816 - This field is used to store Original Agreement Legal Entity Customer</description>
        <formula>Original_Agreement__r.Legal_Entity_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Agreement Legal Entity Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Agreement_Name_For__c</fullName>
        <description>CLM-MC-CLMCMA-18816 - This field is used to store Original Agreement Name</description>
        <formula>Original_Agreement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Agreement_Start_Date_For__c</fullName>
        <description>CLM-MC-CLMCMA-18816 - This field is used to store Original Agreement Start Date.</description>
        <formula>Original_Agreement__r.Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Party_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - Link to contact record to identify external signatory</description>
        <label>Other Party Signed By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Other Party Signed By)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Party_Signed_Date__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Date when external signatory signed</description>
        <label>Other Party Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Party_Signed_Title__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Title of person signing on bahalf of Other Party</description>
        <label>Other Party Signed Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Party_Does_Not_Need_To_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CLM-MC-CLMCMA-18817 - This field is used to set other party signature fields optional</description>
        <label>Other Party Does Not Need To Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Parent Account Id.</description>
        <formula>CASESAFEID(Account__r.ParentId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <formula>CASESAFEID( Related_Opportunity__r.Parent_Opportunity__c)</formula>
        <label>Parent Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Holds the Payment Term associated with the agreement</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>three (3)</fullName>
                </value>
                <value>
                    <fullName>five (5)</fullName>
                </value>
                <value>
                    <fullName>seven (7)</fullName>
                </value>
                <value>
                    <fullName>ten (10)</fullName>
                </value>
                <value>
                    <fullName>fourteen (14)</fullName>
                </value>
                <value>
                    <fullName>fifteen (15)</fullName>
                </value>
                <value>
                    <fullName>thirty (30)</fullName>
                    <default>true</default>
                    <label>thirty (30)</label>
                </value>
                <value>
                    <fullName>forty five (45)</fullName>
                </value>
                <value>
                    <fullName>sixty (60)</fullName>
                </value>
                <value>
                    <fullName>sixty five (65)</fullName>
                </value>
                <value>
                    <fullName>seventy five (75)</fullName>
                </value>
                <value>
                    <fullName>ninety (90)</fullName>
                </value>
                <value>
                    <fullName>one hundred and twenty (120)</fullName>
                </value>
                <value>
                    <fullName>Upon Receipt of Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permits_Term_of_Master_for_Convenience__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if permits term. of master for convenience or not.</description>
        <label>Permits Term. of Master for Convenience?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permits_Term_of_SOWs_for_Convenience__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if permits term. of SOWs for convenience or not.</description>
        <label>Permits Term. of SOWs for Convenience?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CLM-MC-CLMCMA-17657 - Indicates whether agreement has an end date specified</description>
        <label>Perpetual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_AP__c</fullName>
        <description>CLM-MC-CLMCMA-18558 - To preview the generated document</description>
        <formula>IF(AND(OR(ISPICKVAL(Status_Category__c, &quot;In Authoring&quot;),ISPICKVAL(Status_Category__c, &quot;Request&quot;), ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;), ISPICKVAL(Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Status_Category__c, &quot;Expired&quot;), ISPICKVAL(Status_Category__c, &quot;Terminated&quot;), ISPICKVAL(Status_Category__c, &quot;Amended&quot;), ISPICKVAL(Status_Category__c, &quot;Cancelled&quot;))), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Conga_Agreement_Id__c &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;,IMAGE(&quot;/resource/AgreementButtonPreview&quot;, &quot;Preview&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Line1__c</fullName>
        <description>CLM-MC-CLMCMA-19941 - This field used to decide team lead.</description>
        <label>Primary Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InfoSol-IM</fullName>
                </value>
                <value>
                    <fullName>InfoSol-Data Products</fullName>
                </value>
                <value>
                    <fullName>CommSol-Brand&amp;Marketing</fullName>
                </value>
                <value>
                    <fullName>CommSol-OmniChannel</fullName>
                </value>
                <value>
                    <fullName>CommSol-MarketAccess</fullName>
                </value>
                <value>
                    <fullName>RWSol-Tech&amp;Data</fullName>
                </value>
                <value>
                    <fullName>CommSol-Compliance&amp;Quality</fullName>
                </value>
                <value>
                    <fullName>RWSol-MedSci</fullName>
                </value>
                <value>
                    <fullName>HCSol-Profes Services</fullName>
                </value>
                <value>
                    <fullName>CommSol-FieldForceOperations</fullName>
                </value>
                <value>
                    <fullName>RWSol-Strategy&amp;Innovation</fullName>
                </value>
                <value>
                    <fullName>RWSol-PCS</fullName>
                </value>
                <value>
                    <fullName>RWSol-Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>CommSol-EBP</fullName>
                </value>
                <value>
                    <fullName>SPDI Supplier Contracts</fullName>
                </value>
                <value>
                    <fullName>HCSol-Data</fullName>
                </value>
                <value>
                    <fullName>InfoSol-EBP</fullName>
                </value>
                <value>
                    <fullName>InfoSol-FINCOM</fullName>
                </value>
                <value>
                    <fullName>InfoSol-Global</fullName>
                </value>
                <value>
                    <fullName>InfoSol-PharMetrics Plus/AEMR</fullName>
                </value>
                <value>
                    <fullName>SPDI Client Contracts</fullName>
                </value>
                <value>
                    <fullName>RWSol-EBP</fullName>
                </value>
                <value>
                    <fullName>CommSol-Client Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Support Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Business_Line__c</fullName>
        <description>CLM-MC-CLMCMA-18191 - This field used to decide team lead.</description>
        <label>Del - Primary Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>       
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - This is a lookup field to contact and is used to store primary contact.</description>             
        <inlineHelpText>Please reach out to the Customer Primary Contact person in case of questions.</inlineHelpText>
        <label>Customer Primary Contact </label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Primary Contact)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Expenses__c</fullName>
        <description>CLM-MC-CLMCMA-18680 - This currency field is used to store project expenses.</description>
        <label>Project Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>    
    <fields>
        <fullName>Re_Send_e_Signatures_Reminder__c</fullName>
        <description>CLM-MC-CLMCMA-18411 - formula field for Re send for eSignature reminder</description>
        <formula>IF(
AND(
OR($RecordType.DeveloperName == &quot;MSA&quot;,
$RecordType.DeveloperName == &quot;USBU&quot;),
ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),
NOT(ISBLANK(Docusign_Account_Id__c)),
NOT(ISBLANK(DocuSign_Envelope_Id__c)),
DocuSign_Envelope_Id__r.Status__c != &quot;Completed&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Cancelled&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Draft&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Declined&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Voided&quot;),
HYPERLINK(&quot;/lightning/cmp/c__LXC_CLM_SendReminder?c__recordId=&quot;+Id,
IMAGE(&quot;/resource/SendeSignatureReminderAP&quot;,&quot;Send e Signature Reminder&quot;), &quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Re Send e-Signatures (Reminder)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <description>CLM-MC-CLMCMA-19555 - picklist field to support Novasyte MSA data load</description>
        <label>Rebate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recall_Void_E_Signature_Request__c</fullName>
        <description>CLM-MC-CLMCMA-18411 - formula field for recall void eSignature</description>
        <formula>IF(
AND(
ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),
NOT(ISBLANK(Docusign_Account_Id__c)),
NOT(ISBLANK(DocuSign_Envelope_Id__c)),
DocuSign_Envelope_Id__r.Status__c != &quot;Completed&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Cancelled&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Draft&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Declined&quot;,
DocuSign_Envelope_Id__r.Status__c != &quot;Voided&quot;),
HYPERLINK(&quot;/lightning/cmp/c__LXC_CLM_RecallESignature?c__recordId=&quot;+Id,
IMAGE(&quot;/resource/RecalleSignatureRequestAP&quot;,&quot;Recall E-Signature Request&quot;), &quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recall (Void) E-Signature Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This formula field displays record type developer name.</description>           
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regenerate_AP_Custom__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This formula field is used for template regeneration.</description>           
        <formula>IF(AND(ISPICKVAL(Status_Category__c, &quot;In Authoring&quot;)),
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp; Conga_Agreement_Id__c &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;,
IMAGE(&quot;/resource/AgreementAPActionButton&quot;, &quot;Regenerate&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regenerate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Master_Agr_Subnational_Terms_Incl_US__c</fullName>
        <description>CLM-MC-CLMCMA-19163 - This field is used to store Related Master Agreement Subnational Terms Included? (USOnly)</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.Subnational_Terms_Included_US_Only__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rel Master Agr Subnational Terms Incl US</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Master_CPRA_Compliance_Status_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - Picklist Field to track related master agreement&apos;s status of letters and remediation.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.CPRA_Compliance_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master CPRA Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Master_Info_Service_Plan_Incl_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if Related Master Agreement&apos;s Info Service Plan Included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.Info_Service_Plan_Included__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master Info Service Plan Incl?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Master_Online_Terms_Tech_Access_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if related master agreement&apos;s online terms/tech access terms included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.Online_Terms_Tech_Access_Terms_Incl__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master Online Terms/Tech Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rel_Master_Permits_Term_SOWs_Conv_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if Related Master Agreement&apos;s permits term. of SOWs for convenience or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.Permits_Term_of_SOWs_for_Convenience__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rel Master Permit Term SOWs Convenience?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_AMA_Terms_Incl_USOnly_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if Related Master Agreement&apos;s AMA Terms included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.AMA_Terms_Included_US_Only__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master AMA Terms Incl? (USOnly)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_Agreement_Start_Date_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This field used to store Related MSA Start Date</description>
        <formula>Related_Master_IQVIAAgreement__r.Contract_Start_Date__c</formula>
        <label>Related Master Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Master_Agreement_Subtype__c</fullName>
        <description>CLM-MC-CLMCMA-19163 - This field is used to store Related Master Agreement Subtype</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.Subtype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master Agreement Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_DEA_Terms_Incl_USOnly_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if Related Master Agreement&apos;s DEA Terms included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.DEA_Terms_Included_US_Only__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master DEA Terms Incl? (USOnly)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_IQVIAAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-18089 - Stores MSA link</description>
        <label>Related Master Agreement</label>
        <referenceTo>IQVIA_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Related Master Agreement)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Master_IQVIA_Agreement_for__c</fullName>
        <description>CLM-MC-CLMCMA-18089 - This filed used to store Relates Master Agreement Name</description>
        <formula>Related_Master_IQVIAAgreement__r.Name</formula>
        <label>Related Master Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_OneKey_Terms_Included_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if related master agreement&apos;s onekey terms included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.OneKey_Terms_Included__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master OneKey Terms Included?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_SaaS_Terms_Included_for__c</fullName>
        <description>CLM-MC-CLMCMA-18522 - This field is used to store if Related Master Agreement&apos;s SaaS terms included or not.</description>
        <formula>TEXT(Related_Master_IQVIAAgreement__r.SaaS_Terms_Included__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Master SaaS Addendum Included?</label>
        <type>Text</type>
    </fields>
</CustomObject>